fix: 🛠 resolve header visibility (#14)

--- a/src/components/infos/infos.module.css
+++ b/src/components/infos/infos.module.css
@@ -7,7 +7,7 @@
     align-items: center;
     justify-content: space-between;
     margin-bottom: var(--gui-gutter-base);
-    color: rgba(255, 255, 255, .6);
+    color: rgba(255, 255, 255, .8);
     font-size: 16px;
 }
 
